@@ -31,6 +31,7 @@ import au.gov.asd.tac.constellation.plugins.parameters.PluginParameters;
 import au.gov.asd.tac.constellation.views.analyticview.results.AnalyticResult;
 import au.gov.asd.tac.constellation.views.analyticview.results.ClusterResult;
 import au.gov.asd.tac.constellation.views.analyticview.results.ClusterResult.ClusterData;
+import java.lang.reflect.InvocationTargetException;
 import org.openide.util.Exceptions;
 
 /**
@@ -113,11 +114,13 @@ public abstract class ClusterAnalyticPlugin extends AnalyticPlugin<ClusterResult
             getAnalyticAttributes(parameters).forEach(schemaAttribute -> schemaAttribute.ensure(graph));
 
             // run analytic plugin on the entire graph and compute results
-            PluginExecution.withPlugin(getAnalyticPlugin().newInstance())
+            PluginExecution.withPlugin(getAnalyticPlugin().getDeclaredConstructor().newInstance())
                     .withParameters(parameters)
                     .executeNow(graph);
             computeResultsFromGraph(graph, parameters);
-        } catch (InstantiationException | IllegalAccessException ex) {
+        } catch (final IllegalAccessException | IllegalArgumentException
+                | InstantiationException | NoSuchMethodException
+                | SecurityException | InvocationTargetException ex) {
             Exceptions.printStackTrace(ex);
         }
     }
