@@ -23,6 +23,7 @@ import au.gov.asd.tac.constellation.plugins.importexport.delimited.model.CellVal
 import au.gov.asd.tac.constellation.plugins.importexport.delimited.model.TableRow;
 import au.gov.asd.tac.constellation.plugins.importexport.delimited.translator.AttributeTranslator;
 import au.gov.asd.tac.constellation.plugins.parameters.PluginParameters;
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -79,7 +80,7 @@ public class ImportTableColumn extends TableColumn<TableRow, CellValue> {
                 }
             }
             try {
-                AttributeDescription attributeDescription = attributeDescriptionClass.newInstance();
+                AttributeDescription attributeDescription = attributeDescriptionClass.getDeclaredConstructor().newInstance();
                 for (TableRow row : data) {
                     CellValueProperty property = row.getProperty(columnIndex);
                     String value = property.get().getOriginalText();
@@ -103,7 +104,9 @@ public class ImportTableColumn extends TableColumn<TableRow, CellValue> {
                         }
                     }
                 }
-            } catch (IllegalAccessException | InstantiationException ex) {
+            } catch (final IllegalAccessException | IllegalArgumentException
+                    | InstantiationException | NoSuchMethodException
+                    | SecurityException | InvocationTargetException ex) {
                 LOGGER.log(Level.SEVERE, ex.getLocalizedMessage(), ex);
             }
         } else {
